syntax = "proto3";

package remote;

option go_package = "./remote;remote";
option java_multiple_files = true;
option java_package = "io.turbo-geth.db";
option java_outer_classname = "DB";

// Provides methods about database
service DB {
  rpc Size(SizeRequest) returns(SizeReply);
  rpc BucketSize(BucketSizeRequest) returns(BucketSizeReply);
}

message SizeRequest {}

message SizeReply { uint64 size = 1; }

message BucketSizeRequest { string bucketName = 1; }

message BucketSizeReply { uint64 size = 1; }
